argocd/manifest/app-server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-server
  labels:
    app: app-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-server
  template:
    metadata:
      labels:
        app: app-server
    spec:
      containers:
        - name: app-server
          image: 571515939637.dkr.ecr.ap-southeast-1.amazonaws.com/appserver:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-server-service
spec:
  type: ClusterIP
  selector:
    app: app-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
