argocd/manifest/web-app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web-app-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: web-app-namespace
  labels:
    app: web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
          image: 571515939637.dkr.ecr.ap-southeast-1.amazonaws.com/webserver:075a473
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  namespace: web-app-namespace
spec:
  type: ClusterIP
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
